# lidar_cam_fusion

./: .gitignore  CLAUDE.md  README.md  pixi.toml
.claude/: settings.json
.claude/commands/: explain.md  plan.md  review-pr.md  scaffold-node.md  verify-step.md
.github/: CODEOWNERS
config/: cyclonedds.xml
scripts/: activate_ros.sh  download_kitti.py  export_yolo_onnx.py  verify_publisher.py  verify_step1.py  verify_step2.py  verify_step3.py
src/perception_pipeline/: CMakeLists.txt  package.xml  setup.py
src/perception_pipeline/config/: calibration.yaml
src/perception_pipeline/include/perception_pipeline/: camera_detector.hpp  lidar_camera_projector.hpp  lidar_preprocessor.hpp
src/perception_pipeline/launch/: fusion_pipeline.launch.py
src/perception_pipeline/perception_pipeline/: camera_detector_node.py  fusion_node.py  kitti_publisher_node.py  lidar_processor_node.py
src/perception_pipeline/src/: camera_detector.cpp  camera_detector_node.cpp  fusion_node.cpp  lidar_camera_projector.cpp  lidar_preprocessor.cpp  lidar_processor_node.cpp
